2012-01-18  Aldy Hernandez  <aldyh@redhat.com>

	* trans-mem.c (requires_barrier): Remove call to is_global_var.

2012-01-18  Richard Guenther  <rguenther@suse.de>

	* tree-ssa.c (useless_type_conversion_p): Remove special-casing
	of conversions to void *.

2012-01-17  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>
	    Richard Sandiford  <rdsandiford@googlemail.com>

	PR middle-end/50325
	PR middle-end/51192
	* optabs.h (simplify_expand_binop): Declare.
	* optabs.c (simplify_expand_binop): Make global.
	* expmed.c (store_bit_field_1): Use simplify_expand_binop on big
	endian targets if the source cannot be exactly covered by word
	mode chunks.

2012-01-17  Jakub Jelinek  <jakub@redhat.com>

	PR bootstrap/51872
	* hard-reg-set.h (struct hard_reg_set_container): New type.
	* target.h (struct hard_reg_set_container): Forward declare.
	* target.def (set_up_by_prologue): New target hook.
	* doc/tm.texi.in (TARGET_SET_UP_BY_PROLOGUE): Document it.
	* doc/tm.texi: Regenerated.
	* function.c (thread_prologue_and_epilogue_insns): Change
	set_up_by_prologue HARD_REG_SET into struct hard_reg_set_container.
	Call targetm.set_up_by_prologue on it.
	* config/rs6000/rs6000.c (rs6000_set_up_by_prologue): New function.
	(TARGET_SET_UP_BY_PROLOGUE): Redefine to it.

2012-01-17  Nick Clifton  <nickc@redhat.com>

	* config/rx/rx.c (rx_can_use_simple_return): New function.
	* config/rx/rx-protos.h (rx_can_use_simple_return): Prototype.
	* config/rx/rx.md (return): Predicate on rx_can_use_simple_return.

2012-01-17  Richard Guenther  <rguenther@suse.de>

	PR middle-end/51782
	* expr.c (expand_assignment): Take address-space information
	from the address operand of MEM_REF and TARGET_MEM_REF.
	(expand_expr_real_1): Likewise.

2012-01-17  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* ira.c (do_reload): Make sure ira_dump_file is re-set if no
	reload dump is requested.

2012-01-17  Aldy Hernandez  <aldyh@redhat.com>

	PR other/51165